--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 fastapi==0.104.1
-uvicorn==0.24.0
+uvicorn[standard]==0.24.0
 transformers==4.35.2
-torch==2.1.1+cpu
+torch==2.1.1
 pydantic==2.5.0
 numpy==1.24.3
---find-links https://download.pytorch.org/whl/torch_stable.html
